--- a/style.css
+++ b/style.css
@@ -1,29 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400');
 
-span {
-  color: white;
-  font-size: 2em;
-  margin: 6px;
-}
-
 body {
   font-family: 'Montserrat', 'Arial', sans-serif;
   background-color: black;
   margin: 0;
 }
 
-.input {
+span {
+  color: white;
+  font-size: 2em;
+  margin: 6px;
+  margin-bottom: 16px;
+}
+
+input, select {
+  color: white;
   font-family: inherit;
   border: none;
   padding: 16px 20px;
   margin: 0 0 6px;
   border-radius: 2px;
   background-color: #1b1c22;
-  color: white;
-}
-
-.header {
-  margin-bottom: 16px;
 }
 
 #main {
